umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@lillymol_tisis1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule_lenient
category: extended_molecule_lenient
molecule:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 18
molecule_lenient:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 18
extended_molecule:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 18
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: "C5[L]2"
    atom_count: 7
    bond_count: 7
    extended_atoms: 2
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
